# TPDPHook-FC-Mod

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TPDPHook-Extended.sln  configure.bat
TPDPHook-Extended/: TPDPHook-Extended.vcxproj  TPDPHook-Extended.vcxproj.filters  exports.def  hook.cpp  hook.h  ini_parser.cpp  log.cpp  plugin.cpp  plugin.h  textconvert.cpp  textconvert.h  typedefs.h  version.cpp  version.h
TPDPHook-Extended/dxgi/: dxgi_impl.cpp  dxgi_impl.h  hook_dxgi.cpp
TPDPHook-Extended/tpdp/: custom_abilities.cpp  custom_skills.cpp  hook_tpdp.cpp  hook_tpdp.h  mem_structs.h  misc_hacks.cpp  misc_hacks.h  tpdp_data.cpp  tpdp_data.h
patches/: README.txt  patch_en.xdelta  patch_jp.xdelta
src/: exports.def  hook.cpp  hook.h  ini_parser.cpp  ini_parser.h  internal_config.h  log.cpp  log.h  main.cpp  network.cpp  network.h  plugin.cpp  plugin.h  textconvert.cpp  textconvert.h  typedefs.h  version.cpp  version.h
src/dxgi/: dxgi_impl.cpp  dxgi_impl.h  hook_dxgi.cpp  hook_dxgi.h
src/tpdp/: audio.cpp  audio.h  custom_abilities.cpp  custom_abilities.h  custom_skills.cpp  custom_skills.h  graphics.cpp  graphics.h  hook_tpdp.cpp  hook_tpdp.h  mem_structs.h  misc_hacks.cpp  misc_hacks.h  tpdp_data.cpp  tpdp_data.h
